<resources>
    <string name="app_name">EntreGaudium</string>
    <string name="title_activity_maps">EntreGaudium</string>
    <string name="toast_entrega_finalizada">Entrega finalizada!</string>
    <string name="toast_endereco_coleta">Você já está no endereço de coleta</string>
    <string name="toast_endereco_entrega">Você já está no endereço de entrega</string>
    <string name="debug_button_receber_pedido">Receber pedido</string>
    <string name="debug_button_endereco_coleta">Ir para endereço de coleta</string>
    <string name="debug_button_endereco_entrega">Ir para endereço de entrega</string>
    <string name="va_ate_endereco_entrega_id">Vá até o endereço da entrega %1$s</string>
    <string name="button_coletar">Coletar produto</string>
    <string name="button_entregar">Entregar produto</string>
    <string name="button_oferta_aceitar">Aceitar</string>
    <string name="button_oferta_rejeitar">Rejeitar</string>
    <string name="label_endereco_entrega">Vá até o endereço</string>
    <string name="label_endereco_coleta">Local de coleta</string>
    <string name="label_entregas">Entregas: %1$d</string>
    <string name="segundos_restantes">%1$d(s) restantes</string>
    <string name="lorem_ipsum">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.

The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</string>
    <string name="entregas">Entregas</string>
    <string name="saldo">Saldo</string>
    <string name="nota">Nota</string>
    <string name="acessar_perfil">Acessar perfil</string>
</resources>
