<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity" />

    <RelativeLayout
        android:id="@+id/layMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <!--  Menu para o momento DECIDINDO  -->
        <RelativeLayout
            android:id="@+id/layMenuOferta"
            style="@style/MenuPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/txtLocalColetaLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="16dp"
                android:text="@string/label_endereco_coleta"
                android:textColor="#3A3A3A"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txtEntregasLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_alignRight="@+id/txtLocalColetaLabel"
                android:layout_marginTop="16dp"
                android:text="@string/label_entregas"
                android:textColor="#3A3A3A"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtEnderecoOferta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtLocalColetaLabel"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="12dp"
                android:textColor="#222"
                android:textSize="16sp"
                tools:text="Rua da Assembéia, 10 - Centro" />

            <!-- Espaço com botões do menu do momento DECIDINDO -->
            <RelativeLayout
                android:id="@+id/layOpcoes"
                style="MenuLayButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtEnderecoOferta">

                <Button
                    android:id="@+id/btnRejeitar"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:backgroundTint="#E95252"
                    android:text="@string/button_oferta_rejeitar"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/btnAceitar"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:backgroundTint="#2DC935"
                    android:text="@string/button_oferta_aceitar"
                    android:textColor="#FFFFFF" />
            </RelativeLayout>

        </RelativeLayout>


        <!--  Menu para o momento COLETANDO -->
        <LinearLayout
            android:id="@+id/layMenuColeta"
            style="@style/MenuPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F3F3D3"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/txtColetaLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_endereco_coleta"
                android:textColor="#3A3A3A"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txtEnderecoColeta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:textColor="#222"
                android:textSize="16sp"
                tools:text="Rua da Assembéia, 10, Centro, RJ" />

            <!-- Espaço com botões do menu do momento COLETANDO -->
            <RelativeLayout
                android:id="@+id/layColetaButton"
                style="MenuLayButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnColetar"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/button_coletar" />
            </RelativeLayout>

        </LinearLayout>

        <!--  Menu para o momento ENTREGANDO -->
        <LinearLayout
            android:id="@+id/layMenuEntrega"
            style="@style/MenuPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D4F3D4"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/txtEntrega"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textColor="#222"
                android:textSize="16sp"
                tools:text="Vá até o endereço do pedido #1" />

            <TextView
                android:id="@+id/txtEntregaEndereco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:textColor="#222"
                android:textSize="16sp"
                tools:text="Lorem ipsum" />

            <!-- Espaço com botões do menu do momento ENTREGANDO -->
            <RelativeLayout
                android:id="@+id/layEntregaButton"
                style="MenuLayButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnEntregar"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/button_entregar" />
            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>

    <!-- Botão para DEBUG -->
    <Button
        android:id="@+id/btnDebugAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/layMenu"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="8dp"
        android:backgroundTint="#FFDD5D"
        android:drawableTop="@drawable/ic_bug"
        android:text="Solicitar pedido" />
</RelativeLayout>