<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2">

    <ImageView
        android:id="@+id/ivProfile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_weight="1"
        android:scaleType="centerCrop"
        android:src="@drawable/img_entregador" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ivProfile"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="@color/colorBlueTransparent"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingLeft="24dp"
        android:paddingTop="16dp"
        android:paddingRight="24dp"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/tvNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:text="@string/app_name"
            android:textColor="@color/colorWhite1"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvCargo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/app_name"
            android:textColor="@color/colorWhite3"
            android:textSize="16sp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/llProfile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ivProfile"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_weight="1"
        android:background="@color/colorBlue">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/llBottom"
            android:layout_alignParentTop="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp">

            <TextView
                android:id="@+id/tvDescricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:text="@string/lorem_ipsum"
                android:textColor="@color/colorWhite3" />

        </ScrollView>

        <LinearLayout
            android:id="@+id/llBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:id="@+id/llEntregas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_entregas" />

                <TextView
                    android:id="@+id/tvEntrega"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/colorWhite1"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/entregas"
                    android:textColor="@color/colorWhite3"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llSaldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_saldo" />

                <TextView
                    android:id="@+id/tvSaldo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/colorWhite1"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/saldo"
                    android:textColor="@color/colorWhite3"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llNota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_nota" />

                <TextView
                    android:id="@+id/tvNota"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/colorWhite1"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nota"
                    android:textColor="@color/colorWhite3"
                    android:textSize="13sp" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>